# DualShockPCController

./: .gitignore  CMakeLists.txt  DualShockPCController.sln  README.md
DualShockPCController/: AddCustomCommandDialog.cpp  AddCustomCommandDialog.h  AddCustomCommandDialog.ui  ButtonLayoutSettings.cpp  ButtonLayoutSettings.h  ButtonLayoutSettings.ui  CustomButtonConfiguration.cpp  CustomButtonConfiguration.h  CustomButtonHandler.cpp  CustomButtonHandler.h  CustomButtonSequence.cpp  CustomButtonSequence.h  DefaultConfigButtonHandler.cpp  DefaultConfigButtonHandler.h  DualShockController.cpp  DualShockController.h  DualShockPCController.vcxproj  DualShockPCController.vcxproj.filters  GyroMouseControlSettings.cpp  GyroMouseControlSettings.h  GyroMouseControlSettings.ui  LightBarColorSettings.cpp  LightBarColorSettings.h  LightBarColorSettings.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MouseSensitivitySettings.cpp  MouseSensitivitySettings.h  MouseSensitivitySettings.ui  OSHelper.cpp  OSHelper.h  RumbleSensitivtySettings.cpp  RumbleSensitivtySettings.h  SensitivitySettings.ui  main.cpp
